<resources>
    <string name="app_name">Recycling App</string>
    <string name="recycle_sma" translatable="false">Recycle Smart, Live Green</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="find_password">Find Password</string>
    <string name="sign_up">Sign up</string>
    <string name="some_id">Easy Login</string>
    <string name="login">Login</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up1">Sign up</string>
    <string name="sign_up_sc2">SIGN UP</string>
    <string name="google_button" translatable="false">Google Sign In</string>
    <string name="naver_button" translatable="false">Naver Sign In</string>
    <string name="kakaotalk_button" translatable="false">KakaoTalk Sign In</string>
    <string name="profile">Profile</string>
    <string name="blogs">Blogs</string>
    <string name="take_a_picture" translatable="false">Take a Picture\nScan the waste</string>
    <string name="label">Get Started</string>
    <string name="user_name" translatable="false">User Name</string>
    <string name="waste_record_string">Waste Record</string>
    <string name="waste_record" translatable="false">1 January 2024</string>
    <string name="joined_date_string">Joined Date</string>
    <string name="joined_date" translatable="false">1 January 2024</string>
    <string name="user_id_string">ID</string>
    <string name="user_id" translatable="false">user_id</string>
    <string name="logout">Log out</string>
    <string name="delete">Delete</string>
    <string name="january_202" translatable="false">1 January 2024</string>
    <string name="setting">Setting</string>
    <string name="find_your_p">Find Your Password</string>
    <string name="forgotten_y">Forgotten your Password?\nEnter your ID below</string>
    <string name="your_id">Your ID</string>
    <string name="your_passwo">Your Password</string>
    <string name="ok">OK</string>
    <string name="character1" translatable="false">characters_for_profile</string>
    <string name="character2" translatable="false">characters_for_profile</string>
    <string name="character3" translatable="false">characters_for_profile</string>
    <string name="character4" translatable="false">characters_for_profile</string>
    <string name="character5" translatable="false">characters_for_profile</string>
    <string name="character6" translatable="false">characters_for_profile</string>
    <string name="character7" translatable="false">characters_for_profile</string>
    <string name="character8" translatable="false">characters_for_profile</string>
    <string name="character9" translatable="false">characters_for_profile</string>
    <string name="character10" translatable="false">characters_for_profile</string>
    <string name="character11" translatable="false">characters_for_profile</string>
    <string name="character12" translatable="false">characters_for_profile</string>
    <string name="character13" translatable="false">characters_for_profile</string>
    <string name="character14" translatable="false">characters_for_profile</string>
    <string name="character15" translatable="false">characters_for_profile</string>
    <string name="character16" translatable="false">characters_for_profile</string>
    <string name="character17" translatable="false">characters_for_profile</string>
    <string name="character18" translatable="false">characters_for_profile</string>
    <string name="character19" translatable="false">characters_for_profile</string>
    <string name="character20" translatable="false">characters_for_profile</string>
    <string name="retake">Re-Take</string>
    <string name="pet">Pet</string>
    <string name="result" translatable="false">"         After thoroughly washing the inside of the plastic bottle, remove the label and separate it for recycling! Closing the lid after compression reduces the volume, making it more economical to collect and transport. The PET bottles separated in this way are     "</string>
    <string name="advice" translatable="false">
        Plastic raw materials, synthetic fibers, non-woven fabrics, etc.
Recycled in many ways!
    </string>
    <string name="classification" translatable="false">1 plastic bottle</string>
    <string name="classification_next" translatable="false">was detected</string>
        <string name="app_name1" translatable="false">YourApp</string>
        <string name="settings_title">Setting</string>
        <string name="screen_mode">Appearance</string>
        <string name="language">Language</string>
        <string name="about_us" translatable="false">About us</string>
        <string name="about_us_details" translatable="false">At Green Cycle, we\'re passionate about making a positive impact on our planet. Our mission is to revolutionize the way people think about recycling and contribute to a more sustainable future for generations to come.</string>
        <string name="back" translatable="false">Back</string>
    <string name="sustainabil" translatable="false">
- Sustainability \n - Convenience\n - Community\n - Impact
</string>
    <string name="title_recent" translatable="false">Recent Actions</string>
    <string name="settings_screen_title" translatable="false">settings_screen_title</string>
    <string name="mode_light">Light</string>
    <string name="mode_dark">Dark</string>
    <string name="mode_system">System</string>
    <string name="language_english">English</string>
    <string name="language_korean">Korean</string>
    <string name="do_you_logout">Do you want to log out?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="home_2_vinyl">Vinyl</string>
    <string name="home_2_styrofoam">Styrofoam</string>
    <string name="home_2_plastic">Plastic pet</string>
    <string name="home_2_glass">Glass</string>
    <string name="home_2_paper">Paper</string>
    <string name="home_2_can">Can</string>
    <string name="home_2_title">Methods for Separate Discharge</string>
    <string name="dialogue_delete">Do you really want to delete your account?</string>
    <string name="login_2">Input ID and Password</string>
    <string name="login_success">login successfully</string>
    <string name="checkID_pass">Check ID and Password!</string>
    <string name="all_info">Enter all memeber information</string>
    <string name="register">successfully registered</string>
    <string name="signup_fail">Failed to sign up</string>
    <string name="exist_id">Already existing ID</string>
    <string name="password_not_match">Password don\'t match</string>
    <string name="password_try_again">Please enter your password in English and at least 8 characters, including numbers.</string>
    <string name="id_try_again">Please enter at least 6 characters of your ID, including English and numbers.</string>
    <string name="delete_success">User account deleted successfully</string>
    <string name="delete_fail">Failed to delete user account</string>
    <string name="id_not_found">ID not found</string>
    <string name="blog_read_more">READ MORE</string>
    <string name="photo_delete">Delete</string>
    <string name="watchout">Attention!</string>
    <string name="refer">to know</string>
    <string name="paper_1">Paper</string>
    <string name="paper_2">| Newspaper</string>
    <string name="paper_3">ㆍ Make sure it doesn\'t get wet, straighten it out, stack it one by one, and then tie it up and drain it.</string>
    <string name="paper_4">| Booklet, notebook</string>
    <string name="paper_5">ㆍ Remove vinyl-coated covers, notebook springs, etc., before discharging.</string>
    <string name="paper_6">* Plastic wrapping paper is excluded</string>
    <string name="paper_7">| Boxes (cardboard boxes, etc.)</string>
    <string name="paper_8">ㆍ Remove the vinyl coating part, tape iron pins attached to the box, aluminum foil, etc., and fold it to discharge.</string>
    <string name="paper_9">| Paper Cups</string>
    <string name="paper_10">ㆍ Empty the contents, rinse once with water, squeeze and put in a bag or bundle to discharge.</string>
    <string name="paper_11">Cartons</string>
    <string name="paper_12">| Normal Pack, Sterile Pack</string>
    <string name="paper_13">ㆍ Empty the contents, march once with water, squeeze and put in a bag or bundle together and discharge.</string>
    <string name="paper_14">Please dispose of the cartons in the collection box.</string>
    <string name="paper_15">Cartons are not the same as paper.</string>
    <string name="paper_16">Paper is made into new paper, and cartons are made into different products, such as toilet paper and beauty tissues.</string>
    <string name="paper_17">Dispose of it in a pay-as-you-go bag!</string>
    <string name="paper_18">1. Paper mixed with other materials</string>
    <string name="paper_19">receipt gold foil, tin foil wallpaper</string>
    <string name="paper_20">2. What is not paper</string>
    <string name="paper_22">3. Paper contaminated with foreign substances, etc.</string>
    <string name="paper_23">Oil Pollution Food contamination</string>
    <string name="paper_24">ㆍ Do not mix plastic-coated flyers, vinyls, or other filth.</string>
    <string name="paper_25">Dispose separately in designated outdoor storage areas to prevent mixing with other paper waste.</string>
    <string name="paper_26">Remove materials such as straws and plastic before disposing of paper packs.</string>
    <string name="paper_27">Dispose of in paper pack dedicated collection bins to prevent mixing with other paper waste.</string>
    <string name="paper_28">If there is no dedicated collection bin for paper packs, please tie them with string or another method to distinguish them from other paper items and dispose of them in the paper collection bin if possible.</string>
    <string name="can_1">Metal cans</string>
    <string name="glass_1">Beverage bottles, other types of bottles</string>
    <string name="glass_2">ㆍ Empty the contents, rinse with water, remove any foreign substances, and then dispose.</string>
    <string name="glass_3">ㆍ Dispose without including cigarette butts or other substances.</string>
    <string name="glass_4">ㆍ Dispose of glass bottles with care to prevent breakage.</string>
    <string name="glass_5">ㆍ If separate containers are available by color, separate and dispose accordingly.</string>
    <string name="glass_6">ㆍ If labels can be removed without adhesive, remove labels before disposal.</string>
    <string name="glass_7">ㆍ Wrap broken glass products in newspaper or similar materials before disposing in designated waste bags.</string>
    <string name="glass_8">Deposit bottles</string>
    <string name="glass_9">ㆍ Return empty deposit glass bottles such as soju and beer bottles to retail stores to receive a refund of the deposit.</string>
    <string name="glass_10">ㆍ  Check for deposit refund information on bottle caps and labels.</string>
    <string name="glass_11">ㆍ Empty the contents. We don\'t accept items with cigarette butts or other foreign substances.</string>
    <string name="glass_12">Report refusal of deposit refund and receive up to 50,000 won in compensation!</string>
    <string name="glass_13">Please dispose of in the glass bottle collection bin.</string>
    <string name="glass_14">It\'s not glass bottles!</string>
    <string name="glass_15">Mirror</string>
    <string name="glass_16">Light bulb</string>
    <string name="glass_17">Broken Glass</string>
    <string name="glass_18">Ceramics</string>
    <string name="glass_19">Heat-resistant cookware</string>
    <string name="glass_20">Crystal glassware</string>
    <string name="glass_21">Glass lid</string>
    <string name="glass_22">Toxic substance bottle</string>
    <string name="paper_21">Non-woven plastic synthetic paper</string>
</resources>