<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/show_password_"
    android:layout_width="310dp"
    android:layout_height="150dp"
    android:clipToOutline="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/show_password_dialoge"
    >

    <TextView
        android:id="@+id/your_password"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/do_you_logout"
        android:textAppearance="@style/do_you_logout"
        />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/log_out_yes_button"
            android:layout_width="127dp"
            android:layout_height="42dp"
            android:text="@string/yes"
            android:textAppearance="@style/ok"
            android:gravity="center"
            android:background="@drawable/dialogue_left"
            android:textColor="@color/black"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/log_out_no_button"
            android:layout_width="127dp"
            android:layout_height="42dp"
            android:text="@string/no"
            android:textAppearance="@style/ok"
            android:gravity="center"
            android:background="@drawable/dialogue_right"
            />

    </LinearLayout>


</LinearLayout>
